2007-04-26  Roger Leigh  <rleigh@debian.org>

	* bin/schroot/schroot-options-base.cc
	(check_actions): Re-add ACTION_SESSION_END.

2007-04-25  Roger Leigh  <rleigh@debian.org>

	* test/Makefile.am (LOCAL_CXXFLAGS): Use $(top_srcdir) rather than
	$(top_builddir).

2007-04-25  Roger Leigh  <rleigh@debian.org>

	* NEWS: Document the environment-filter key.

	* bin/schroot/schroot.conf.5.in: Document the environment-filter
	key.

	* bin/schroot/schroot.1.in (list): Document environment variables
	being set, and configuration of environment filtering.

	* sbuild/sbuild-session.cc (run_child): Set SCHROOT_COMMAND,
	SCHROOT_USER, SCHROOT_GROUP, SCHROOT_UID and SCHROOT_GID
	environment variables, equivalent to SUDO_* variables of the same
	name (except for SUDO_GROUP, which does not exist).

	* sbuild/sbuild-auth.cc
	(auth): Initialise rgid and rgroup members from group database.
	(get_rgid): New member function to get rgid.
	(get_rgroup): New member function to get rgroup.

	* sbuild/sbuild-auth.h: Add GROUP error_code and rgid and
	rgroup class members.

2007-04-06  Roger Leigh  <rleigh@debian.org>

	* po/POTFILES.in: Updated with new file locations.

	* Move bin/schroot/schroot-listmounts* to
	bin/schroot-listmounts.

	* Move bin/schroot/schroot-releaselock* to
	bin/schroot-releaselock.

2007-04-06  Roger Leigh  <rleigh@debian.org>

	* bin/csbuild/csbuild-debian-changes.h: Indent method arguments,
	and tidy.

	* bin/csbuild/csbuild-debian-changes.cc (get_value): New methods,
	specialising the generic template for value_type.

2007-04-06  Roger Leigh  <rleigh@debian.org>

	* bin/csbuild/csbuild-debian-changes.(cc|h): New class, base class
	for parsing .changes and .dsc files, based on sbuild::keyfile.

	* bin/csbuild/Makefile.am
	(csbuild_SOURCES): Add csbuild-debian-changes.(cc|h).

2007-04-05  Roger Leigh  <rleigh@debian.org>

	* bin/schroot-base/schroot-base-options.h: Added actions options
	group.

	* bin/schroot-base/schroot-base-options.cc (add_option_groups):